-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1038 2011-05-19 20:52:35 remko Exp $
-----------------------------------------------------------------------------------------

2011-05-19	remko
	* pslib.c, pslib_f77.c:	Split off Fortran bindings
	* pslib.c, gmt_support.c:	Make new *_putusername routines, returning "unknown" on WIN32.
	* gmt_notposix.h:	Properly use #undef HAVE_<func>, instead of #define HAVE_<func> 0
	* *.[ch]:		Changed accordingly (needs #if defined() now)
	* *.sh:			Replaced contour label spec +s and +k by +f
	* *contour_func.c:	---"---
	* gmt_notposix.c:	Gathering of all non-POSIX replacements (from gmt_stat.c)
	* gmt_math.h:		Removed unnecessary GMT_ from GMT_<func> replacements.

2011-05-18	remko
	* *.tex:		Removed .gmt_bb_info; replaced {\it} by \emph{} and {\bf} by \textbf{}.
	* gmt_init.c:		Two routines GMT_parse_[X|Y]_option replaced by single GMT_parse_XY_option.
				-X and -Y option now support modifiers a|c|f|r, treated separately!
	* explain_-XY*.text:	---"---
	* test/psbasemap/origin.sh:	Test new -X and -Y functionality.
	* *.sh, *.bat:		Replaced -B0 with -B/ and -B0g<value> with -Bg<value>.
	* pslib.h:		Removed EPS struct.
	* pslib.c, gmt_plot.c:		PSL_beginplot now has title and font_no arguments (Fortran too) instead of eps.
	* configure.ac, website/*:	Removed --enable-eps setting.
	* gmt_defaults.h, gmt.conf.in:	Removed PS_EPS setting.
	* functions.sh, gmt_init.c:	---"---
	* gmt_keywords.txt:	Moved PS_EPS and PS_COPIES to gmt_keywords.d

2011-05-18	jluis
	* psimage_func.c:	Now is able to plot also indexed images imported via GDAL

2011-05-17	pwessel
	* grdcontour_func.c:	New contour label modifier +t|T[<file>] to save label locations to file.
	* pscontour_func.c:	---"---
	* psxy_func.c:		New quoted line label modifier +t|T[<file>] to save label locations to file.
	* psxyz_func.c:		---"---
				This feature can be used to plot contours or quoted lines in KML with